Added fosuserbundle, security, routes, User entity and its fixtures, custom login page, new favicon and a new Controller.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,4 +1,13 @@
+archmage_user:
+    resource: "@ArchmageUserBundle/Controller"
+    type: annotation
+    prefix: /
+
 archmage_game:
     resource: "@ArchmageGameBundle/Controller"
     type: annotation
+    prefix: /
 
+# app/config/routing.yml
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
