--- a/src/Archmage/GameBundle/Resources/config/routing.yml
+++ b/src/Archmage/GameBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-archmage_game_homepage:
-    path:     /hello/{name}
-    defaults: { _controller: ArchmageGameBundle:Default:index }
+#archmage_game_homepage:
+#    path:     /hello/{name}
+#    defaults: { _controller: ArchmageGameBundle:Default:index }
