--- a/bower.json
+++ b/bower.json
@@ -7,11 +7,12 @@
         "jquery": "1.10.*",
         "jquery-ui": "1.10.*",
         "bootstrap": "3.*",
-        "bootswatch": "3.*",
         "fontawesome": "4.*",
-        "bootstrap-validator": "*"
+        "bootstrap-validator": "*",
+        "datatables": "1.*",
+        "datatables-bootstrap3-plugin": "*"
     },
     "resolutions": {
-        "jquery": ">= 2.0.0"
+        "jquery": ">= 1.10.*"
     }
 }
