--- a/web/.htaccess
+++ b/web/.htaccess
@@ -10,8 +10,8 @@
     RewriteRule ^app.php - [L]
     RewriteCond %{REQUEST_FILENAME} !-f
     # Change below before deploying to production
-    RewriteRule ^(.*)$ app.php [QSA,L]
-    #RewriteRule ^(.*)$ app_dev.php [QSA,L]
+    #RewriteRule ^(.*)$ app.php [QSA,L]
+    RewriteRule ^(.*)$ app_dev.php [QSA,L]
 </IfModule>
 
 # MOD EXPIRES (cacheing)
