--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "2.2.*",
-        "friendsofsymfony/user-bundle": "~2.0@dev"
+        "friendsofsymfony/user-bundle": "~2.0@dev",
+        "raulfraile/ladybug-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
