Incluido bootstrap-select como alternativa a select2. Mejoradas ciertas vistas.

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
         "fontawesome": "4.*",
         "bootstrap-validator": "*",
         "datatables": "1.10.*",
-        "datatables-bootstrap3-plugin": "*"
+        "datatables-bootstrap3-plugin": "*",
+        "bootstrap-select": "master"
     },
     "resolutions": {
         "jquery": ">= 1.10.*"
