Cambiadas algunas fixtures, mejorado summary y research.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,4 +1,8 @@
 services:
+    twig.extension.text:
+         class: Twig_Extensions_Extension_Text
+         tags:
+             - { name: twig.extension }
     app.twig_extension:
         class: Archmage\GameBundle\Twig\TwigExtension
         public: false
