Creando controller as a service para las notices del usuario. Mejorados muchos twigs. Terminado Research. Cambiados algunos nombres e imagenes de hechizos. Creado repositorio de Spells. Cambiados estilos.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,3 +8,5 @@ services:
         public: false
         tags:
             - { name: twig.extension }
+    app.loadNews:
+        class: ArchmageGameBundle\Controller\AccountController
