--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -8,5 +8,7 @@ services:
         public: false
         tags:
             - { name: twig.extension }
-    app.loadNews:
-        class: ArchmageGameBundle\Controller\AccountController
+    service.news:
+        class: Archmage\GameBundle\Controller\AccountController
+        calls:
+            - [setContainer, ["@service_container"]]
