Nuevo controlador como servicio que engloba number format, mantenimientos y flasbag notices. Nuevos mantenimientos de heroes. Mejoras en controladores con los nuevos servicios de number format. Ahora las tropas desbandadas a 0 son destruidas del array y se crean si contrata una nueva.

--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,14 +1,16 @@
 services:
     twig.extension.text:
-         class: Twig_Extensions_Extension_Text
-         tags:
-             - { name: twig.extension }
+        class: Twig_Extensions_Extension_Text
+        public: false
+        tags:
+         - { name: twig.extension }
     app.twig_extension:
         class: Archmage\GameBundle\Twig\TwigExtension
         public: false
         tags:
             - { name: twig.extension }
-    service.news:
-        class: Archmage\GameBundle\Controller\AccountController
+    service.controller:
+        class: Archmage\GameBundle\Controller\ServiceController
+        public: true
         calls:
             - [setContainer, ["@service_container"]]
