--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,7 +1,7 @@
 # app/config/security.yml
 security:
     encoders:
-        FOS\UserBundle\Model\UserInterface: sha512
+        FOS\UserBundle\Model\UserInterface: bcrypt
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
@@ -18,7 +18,7 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
-                csrf_provider: form.csrf_provider
+                csrf_provider: security.csrf.token_manager
             remember_me:
                 lifetime: 3600  # in seconds
                 key:    %secret%  # definido en parameters.yml
