--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,14 +1,14 @@
 # app/config/security.yml
 security:
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
+        FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
 
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username
+            id: fos_user.user_provider.username_email
 
     firewalls:
         dev:
@@ -18,7 +18,11 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
-                csrf_provider: security.csrf.token_manager
+                csrf_provider: form.csrf_provider
+                login_path: /login
+                check_path: /login_check
+                always_use_default_target_path: false
+                default_target_path: /game/summary
             remember_me:
                 lifetime: 3600  # in seconds
                 key:    %secret%  # definido en parameters.yml
