--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,7 +8,7 @@ security:
 
     providers:
         fos_userbundle:
-            id: fos_user.user_provider.username_email
+            id: fos_user.user_provider.username
 
     firewalls:
         dev:
@@ -18,19 +18,22 @@ security:
             pattern: ^/
             form_login:
                 provider: fos_userbundle
-                csrf_provider: form.csrf_provider
+                csrf_provider: security.csrf.token_manager
                 login_path: /login
                 check_path: /login_check
-                always_use_default_target_path: false
-                default_target_path: /game/summary
-            remember_me:
-                lifetime: 3600  # in seconds
-                key:    %secret%  # definido en parameters.yml
-            logout:       true
+                username_parameter: _username
+                password_parameter: _password
+                csrf_parameter: _csrf_token
+                post_only: true
+                always_use_default_target_path: true
+                default_target_path: /game/kingdom/summary
+            logout:
+                path:   /logout
+                target: /login
             anonymous:    true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/game, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/game, role: ROLE_USER }
