--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,5 +9,32 @@ archmage_game:
     prefix: /
 
 # app/config/routing.yml
-fos_user:
-    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+archmage_user:
+    resource: "@ArchmageUserBundle/Controller"
+    type: annotation
+    prefix: /
+
+archmage_game:
+    resource: "@ArchmageGameBundle/Controller"
+    type: annotation
+    prefix: /
+
+# app/config/routing.yml
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+#fos_user_profile:
+#    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+#    prefix: /game/account/profile
+
+#fos_user_resetting:
+#    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+#    prefix: /game/account/resetting
+
+#fos_user_change_password:
+#    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+#    prefix: /game/account/profile
