Trabajando en Templo, Dispell y Conjure con encantamientos.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,4 +36,5 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/$, role: ROLE_USER }
         - { path: ^/game, role: ROLE_USER }
