Terminado attackAuction pero sin persistir aun, manda mensaje pero no actualiza las tropas. Nuevo sistema de mensajeria con TelegramBot, ahora cuando se manda un mensaje al usuario tambien se lo manda al Telegram, pero solo si ha enviado su hash al bot @ArchmageBot, puede verse el nuevo hash en /profile, se crea en el constructor del Player. Cuando se envia un mensaje al bot @TelegramBot con su hash, la funcion addNews lee los updates y enlaza el hash del player con el Id del chat y a partir de ese momento se mandan al chat del usuario. No se puede hacer de otra manera, ya que los bots de Telegram no pueden enviar mensajes al usuario hasta que el usuario los ha agregado por seguridad.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -79,3 +79,7 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: Archmage\UserBundle\Entity\User
+
+# TELEGRAM BOT https://core.telegram.org/bots
+shaygan_telegram_bot_api:
+    token: "%telegram_token%"
