Cambiado script para que borre app/cache/* por haberme dado problemas en produccion. Comentado el que un heroe atacante pueda perder un nivel si pierde el ataque. Arreglado el magiclevel 25 de los dragones blancos, errata. Mejorada la ayuda. Implementado el porcentaje de bonus de recursos de los heroes en summary. Cambiado htaccess para que siempre sea app.php en prod.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -38,13 +38,16 @@ assetic:
     use_controller: false
     bundles:        [ ]
     node: /usr/local/bin/node
+    #node: /usr/bin/node
     filters:
         cssrewrite: ~
         #http://symfony.com/doc/current/cookbook/assetic/uglifyjs.html instead of yuicompressor
         uglifyjs2:
             bin: /usr/local/share/npm/bin/uglifyjs
+            #bin: /usr/bin/uglifyjs
         uglifycss:
             bin: /usr/local/share/npm/bin/uglifycss
+            #bin: /usr/bin/uglifycss
 
 # Doctrine Configuration
 doctrine:
