Quitado ribbon por verse mal en mobile. Modificados muchas vistas. Nuevos tooltips en vistas confusas. Cambiados estilos. Nuevo sistema de remember_me en security.yml fosuserbundle.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,6 +31,11 @@ security:
                 path:   /logout
                 target: /login
             anonymous:    true
+            remember_me:
+                key:      "%secret%"
+                lifetime: 604800 # 1 week in seconds
+                path:     /
+                always_remember_me: true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
