Quitado ahref de Family y Type de disband y recruit. Arreglado bug en ArmyController. Mejorado security.yml, ahora los usuarios se recuerdan con cookies y la pagina principal / redirige a /game/kingdom/summary, asi que si estaba logeado le redirige alli y sino a /login.

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,15 +27,16 @@ security:
                 post_only: true
                 always_use_default_target_path: true
                 default_target_path: /game/kingdom/summary
-            logout:
-                path:   /logout
-                target: /login
-            anonymous:    true
             remember_me:
-                key:      "%secret%"
-                lifetime: 604800 # 1 week in seconds
-                path:     /
+                key: "%secret%"
+                lifetime: 31536000
+                path: /
+                domain: ~
                 always_remember_me: true
+            logout:
+                path: /logout
+                target: /login
+            anonymous: true
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
