--- a/bower.json
+++ b/bower.json
@@ -11,9 +11,7 @@
     "bootstrap-validator": "*",
     "datatables": "1.10.*",
     "datatables-bootstrap3-plugin": "*",
-    "bootstrap-select": "master",
-    "moment": "master",
-    "datatables-sorting-datetime-moment": "master"
+    "bootstrap-select": "master"
   },
   "resolutions": {
     "jquery": ">= 1.10.*",
