Cambiado a date-euro.js para ordenar mensajes.

--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "bootstrap-validator": "*",
     "datatables": "1.10.*",
     "datatables-bootstrap3-plugin": "*",
+    "drmonty-datatables-plugins": "master",
     "bootstrap-select": "master"
   },
   "resolutions": {
