Nuevos artefactos y heroes. Nuevo sistema de rareza para subasta y para encontrar artefactos.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -39,16 +39,16 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        [ ]
-    node: /usr/local/bin/node
-    #node: /usr/bin/node
+    #node: /usr/local/bin/node
+    node: /usr/bin/node
     filters:
         cssrewrite: ~
         uglifyjs2:
-            bin: /usr/local/share/npm/bin/uglifyjs
-            #bin: /usr/bin/uglifyjs
+            #bin: /usr/local/share/npm/bin/uglifyjs
+            bin: /usr/bin/uglifyjs
         uglifycss:
-            bin: /usr/local/share/npm/bin/uglifycss
-            #bin: /usr/bin/uglifycss
+            #bin: /usr/local/share/npm/bin/uglifycss
+            bin: /usr/bin/uglifycss
 
 # Doctrine Configuration
 doctrine:
