--- a/web/.htaccess
+++ b/web/.htaccess
@@ -212,8 +212,8 @@ AddDefaultCharset utf-8
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ app_dev.php [QSA,L]
-    #RewriteRule ^(.*)$ app.php [QSA,L]
+    #RewriteRule ^(.*)$ app_dev.php [QSA,L]
+    RewriteRule ^(.*)$ app.php [QSA,L]
 </IfModule>
 
 # ------------------------------------------------------------------------------
