--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "datatables": "1.10.*",
     "datatables-bootstrap3-plugin": "*",
     "drmonty-datatables-plugins": "master",
-    "bootstrap-select": "master"
+    "bootstrap-select": "master",
+    "bootstrap-tour": "master"
   },
   "resolutions": {
     "jquery": ">= 1.10.*",
