Arregladas translations en registration, login, resetting, change, etc. Trabajando en resetting.

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -31,9 +31,9 @@ fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
     prefix: /game/account/password
 
-#fos_user_resetting:
-#    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-#    prefix: /resetting
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
 
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
