--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,20 +5,20 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallback: "%locale%" }
+    default_locale:  "%locale%"
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
         strict_requirements: ~
     form:            ~
     csrf_protection: ~
-    validation:      { enable_annotations: true }
+    validation:      { enabled: true, enable_annotations: true }
     templating:
         engines: ['twig']
         #assets_version:
     assets:
         version: %assets_version%
-    default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
     session:
@@ -39,16 +39,16 @@ assetic:
     debug:          "%kernel.debug%"
     use_controller: false
     bundles:        [ ]
-    #node: /usr/local/bin/node
-    node: /usr/bin/node
+    node: /usr/local/bin/node
+    #node: /usr/bin/node
     filters:
         cssrewrite: ~
         uglifyjs2:
-            #bin: /usr/local/share/npm/bin/uglifyjs
-            bin: /usr/bin/uglifyjs
+            bin: /usr/local/share/npm/bin/uglifyjs
+            #bin: /usr/bin/uglifyjs
         uglifycss:
-            #bin: /usr/local/share/npm/bin/uglifycss
-            bin: /usr/bin/uglifycss
+            bin: /usr/local/share/npm/bin/uglifycss
+            #bin: /usr/bin/uglifycss
 
 # Doctrine Configuration
 doctrine:
@@ -75,15 +75,27 @@ doctrine:
 swiftmailer:
     transport: "%mailer_transport%"
     host:      "%mailer_host%"
+    port:      "%mailer_port%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+    disable_delivery: false
+    encryption: tls
+    auth_mode: login
 
 # FOSUserBundle
 fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: Archmage\UserBundle\Entity\User
+    registration:
+        form:
+            validation_groups: [Registration]
+        confirmation:
+            enabled: true
+    from_email:
+        address:     admin@wyzard.es
+        sender_name: Wyzard
 
 # TELEGRAM BOT https://core.telegram.org/bots
 shaygan_telegram_bot_api:
