--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -7,9 +7,10 @@ parameters:
     database_user:      root
     database_password:  ~
     mailer_transport:   smtp
-    mailer_host:        127.0.0.1
-    mailer_user:        ~
-    mailer_password:    ~
+    mailer_host:        smtp.strato.com
+    mailer_port:        587
+    mailer_user:        admin@wyzard.es
+    mailer_password:    F3rg4rd1
     locale:             es
     secret:             ThisTokenIsNotSoSecretChangeIt
     telegram_token:     ThisTokenIsNotSoSecretChangeIt
