--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,43 +1,43 @@
 {
-	"name": "ArchMage",
+	"name": "Wyzard",
 	"icons": [
 		{
-			"src": "\/android-chrome-36x36.png?v=7kkGLW3Q8k",
+			"src": "\/android-chrome-36x36.png?v=vMMPPmQLmG",
 			"sizes": "36x36",
 			"type": "image\/png",
-			"density": "0.75"
+			"density": 0.75
 		},
 		{
-			"src": "\/android-chrome-48x48.png?v=7kkGLW3Q8k",
+			"src": "\/android-chrome-48x48.png?v=vMMPPmQLmG",
 			"sizes": "48x48",
 			"type": "image\/png",
-			"density": "1.0"
+			"density": 1
 		},
 		{
-			"src": "\/android-chrome-72x72.png?v=7kkGLW3Q8k",
+			"src": "\/android-chrome-72x72.png?v=vMMPPmQLmG",
 			"sizes": "72x72",
 			"type": "image\/png",
-			"density": "1.5"
+			"density": 1.5
 		},
 		{
-			"src": "\/android-chrome-96x96.png?v=7kkGLW3Q8k",
+			"src": "\/android-chrome-96x96.png?v=vMMPPmQLmG",
 			"sizes": "96x96",
 			"type": "image\/png",
-			"density": "2.0"
+			"density": 2
 		},
 		{
-			"src": "\/android-chrome-144x144.png?v=7kkGLW3Q8k",
+			"src": "\/android-chrome-144x144.png?v=vMMPPmQLmG",
 			"sizes": "144x144",
 			"type": "image\/png",
-			"density": "3.0"
+			"density": 3
 		},
 		{
-			"src": "\/android-chrome-192x192.png?v=7kkGLW3Q8k",
+			"src": "\/android-chrome-192x192.png?v=vMMPPmQLmG",
 			"sizes": "192x192",
 			"type": "image\/png",
-			"density": "4.0"
+			"density": 4
 		}
 	],
-	"start_url": "http:\/\/archmage.servegame.com\/game\/kingdom\/summary",
+	"start_url": "https:\/\/www.wyzard.es",
 	"display": "standalone"
 }
