--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,9 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "raulfraile/ladybug-bundle": "dev-master",
         "shaygan/telegram-bot-api-bundle": "dev-master",
-        "kachkaev/assets-version-bundle": "dev-master"
+        "kachkaev/assets-version-bundle": "dev-master",
+        "payum/payum-bundle": "^1.0",
+        "payum/paypal-express-checkout-nvp": "^1.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
