--- a/src/Archmage/GameBundle/Resources/config/services.yml
+++ b/src/Archmage/GameBundle/Resources/config/services.yml
@@ -1,4 +1,4 @@
-services:
+#services:
 #    archmage_game.example:
 #        class: Archmage\GameBundle\Example
 #        arguments: [@service_id, "plain_value", %parameter%]
