--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -40,9 +40,12 @@ fos_user_profile_show:
 #payum
 payum_capture:
     resource: "@PayumBundle/Resources/config/routing/capture.xml"
+    prefix: /game
 
 payum_authorize:
     resource: "@PayumBundle/Resources/config/routing/authorize.xml"
+    prefix: /game
 
 payum_notify:
     resource: "@PayumBundle/Resources/config/routing/notify.xml"
+    prefix: /game
