Mejorados estilos y entidades del pago por paypal. Nuevos parametros de conexion en parameters y config. Ahora si el purchasecontroller recibe un id erroneo hace redirect y muestra flash.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -110,7 +110,7 @@ payum:
     gateways:
         paypal:
             paypal_express_checkout_nvp:
-                username:  'required'
-                password:  'required'
-                signature: 'required'
-                sandbox: true
+                username:  "%paypal_username%"
+                password:  "%paypal_password%"
+                signature: "%paypal_signature%"
+                sandbox: false
