--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,16 +1,19 @@
 # This file is a "template" of what your parameters.yml file should look like
 parameters:
     database_driver:    pdo_mysql
-    database_host:      127.0.0.1
-    database_port:      ~
-    database_name:      symfony
-    database_user:      root
-    database_password:  ~
+    database_host:      localhost
+    database_port:      3306
+    database_name:      database
+    database_user:      username
+    database_password:  password
     mailer_transport:   smtp
-    mailer_host:        smtp.strato.com
+    mailer_host:        hostname
     mailer_port:        587
-    mailer_user:        admin@wyzard.es
-    mailer_password:    F3rg4rd1
+    mailer_user:        username
+    mailer_password:    password
+    paypal_username:    username
+    paypal_password:    password
+    paypal_signature:   ThisTokenIsNotSoSecretChangeIt
     locale:             es
     secret:             ThisTokenIsNotSoSecretChangeIt
     telegram_token:     ThisTokenIsNotSoSecretChangeIt
