--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -113,4 +113,4 @@ payum:
                 username:  "%paypal_username%"
                 password:  "%paypal_password%"
                 signature: "%paypal_signature%"
-                sandbox: false
+                sandbox: true
