--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,20 +1,22 @@
 # This file is a "template" of what your parameters.yml file should look like
 parameters:
-    database_driver:    pdo_mysql
-    database_host:      localhost
-    database_port:      3306
-    database_name:      database
-    database_user:      username
-    database_password:  password
-    mailer_transport:   smtp
-    mailer_host:        hostname
-    mailer_port:        587
-    mailer_user:        username
-    mailer_password:    password
-    paypal_username:    username
-    paypal_password:    password
-    paypal_signature:   ThisTokenIsNotSoSecretChangeIt
-    locale:             es
-    secret:             ThisTokenIsNotSoSecretChangeIt
-    telegram_token:     ThisTokenIsNotSoSecretChangeIt
-    assets_version:     v1
+    database_driver:                pdo_mysql
+    database_host:                  localhost
+    database_port:                  3306
+    database_name:                  database
+    database_user:                  username
+    database_password:              password
+    mailer_transport:               smtp
+    mailer_host:                    hostname
+    mailer_port:                    587
+    mailer_user:                    username
+    mailer_password:                password
+    paypal_username:                username
+    paypal_password:                password
+    paypal_signature:               ThisTokenIsNotSoSecretChangeIt
+    locale:                         es
+    secret:                         ThisTokenIsNotSoSecretChangeIt
+    assets_version:                 v1
+    knp_disqus.api_key:             YOUR_PUBLIC_API_KEY
+    knp_disqus.secret_key:          YOUR_SECRET_API_KEY
+    knp_disqus.name.shortname:      name
