Mejoradas algunas traducciones. Ahora se manda un email al admin cuando se registra un usuario. Ahora en batalla se muestra la habilidad de la unidad, si la tiene.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -11,6 +11,7 @@ parameters:
     mailer_port:                    587
     mailer_user:                    username
     mailer_password:                password
+    webmaster:                      email
     paypal_username:                username
     paypal_password:                password
     paypal_signature:               ThisTokenIsNotSoSecretChangeIt
